# portfolio_theory

./: README.md  Week 2 exercise.ipynb  Week 3 Regression.ipynb  minvar_portfolio.ipynb  pyproject.toml
